syntax = "proto3";
package osmosis.lockup.v1beta1;

option go_package = "github.com/c-osmosis/osmosis/x/lockup/types";

// GenesisState defines the lockup module's genesis state.
message GenesisState {
}
